# kimchi-fuzz

kimchi/: Cargo.toml
kimchi/fuzz/: Cargo.toml  fuzz_target_1.rs  main.rs
kimchi/fuzz/fuzz_targets/: prove_and_verify.rs  verifier.rs
kimchi/fuzz/src/: README.md  fuzz_utils.rs  main.rs
kimchi/hfuzz_workspace/circuit_fuzz/input/: circuit_corpus_1  circuit_corpus_2  circuit_corpus_3
kimchi/hfuzz_workspace/kimchi/input/: corpus_entry_1  corpus_entry_2
kimchi/src/: circuit_fuzz.rs  main.rs  simple_circ_fuzz.rs
kimchi/src/circuits/: gate.rs  wires.rs
