[package]
name = "kimchi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
mina-signer = { path = "../../signer" }

[dependencies.kimchi]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "verifier"
path = "fuzz_targets/verifier.rs"
test = false
doc = false
